# neural_cellular_automata_wgpu

./: .gitignore  Cargo.toml  README.md  index.html  rule-forge.html
docs/: SDK_FIRST_SHOWCASE_PILOT_MASTERPLAN.md  SPRINT_BACKLOG_6_WEEKS.md
docs/go-to-market/: PILOT_PLAYBOOK.md
ffi/: README.md
ffi/include/: nca_engine.h
src/: compute.wgsl  lib.rs  main.rs  model.rs  render.wgsl
tools/: train_nca.py
unreal/NcaEngineThirdParty/: NcaEngineThirdParty.Build.cs  README.md
unreal/NcaEngineThirdParty/Public/: NcaEngineBridge.h
unreal/NcaEngineThirdParty/include/: nca_engine.h
