[package]
name = "cellforge_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "nca_engine"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
notify = "6.1"
pollster = "0.3"
raw-window-handle = "0.6"
rayon = "1.10"
wgpu = "22.0"
winit = "0.29"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }
